--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ lxml = "^4.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
+black = "^20.8b1"
+flake8 = "^3.9.1"
+isort = "^5.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -19,3 +22,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 pricehist = "pricehist.cli:cli"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
