--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.9"
 requests = "^2.25.1"
 lxml = "^4.6.2"
+cssselect = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
