Log requests as curls.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 requests = "^2.25.1"
 lxml = "^4.6.2"
 cssselect = "^1.1.0"
+curlify = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
