--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ flake8 = "^3.9.1"
 isort = "^5.8.0"
 responses = "^0.13.3"
 coverage = "^5.5"
+pytest-mock = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
