Avoid running flake8 on cache, etc.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test:
   script:
     - poetry run isort src tests --check
     - poetry run black src tests --check
-    - poetry run flake8
+    - poetry run flake8 src tests
     - poetry run pytest
     - poetry run coverage run --source=pricehist -m pytest
     - poetry run coverage report
