--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,4 @@ profile = "black"
 multi_line_output = 3
 
 [tool.pytest.ini_options]
-markers = [
-  "live: makes a live request to a source"
-]
+markers = []
