--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ isort = "^5.8.0"
 responses = "^0.13.3"
 coverage = "^5.5"
 pytest-mock = "^3.6.1"
+tox = "^3.24.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
