--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ curlify = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
-black = "^20.8b1"
+black = "^22.10.0"
 flake8 = "^3.9.1"
 isort = "^5.8.0"
 responses = "^0.13.3"
